# bilibili-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: lib.rs
src/: consts.rs  error.rs  lib.rs  main.rs
src/download/: downloader.rs  mod.rs  model.rs
src/util/: util.rs
